[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "interpolation-engine"
description = "A String Interpolation Automaton"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Till Falko Hofmann" }
]
dynamic = ["version"]
dependencies = [
    "json5",
    "openai",
    "prompt_toolkit",
    "pydantic",
]

[project.urls]
Repository = "https://github.com/tillfalko/interpolation-engine"

[project.scripts]
interpolation-engine = "interpolation_engine.interpolation_engine:main"
show-tokenization = "interpolation_engine.show_tokens:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "interpolation_engine.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
