[package]
name = "interpolation-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
eventsource-stream = "0.2"
futures = "0.3"
json5 = "0.4"
chrono = { version = "0.4", features = ["clock"] }
ratatui = "0.26"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-util = "0.7"
which = "6.0"
async-recursion = "1.1"
